--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -1,24 +1,25 @@
 {% extends "layouts/index.html" %}
 
-{% block title %}Kalendarz Konsultacji{% endblock %}
+{% block title %}Docker + Flask{% endblock %}
 
 {% block body %}
-<div class="flex items-center justify-center min-h-screen bg-gray-100">
-  <div class="text-center bg-white p-10 rounded-lg shadow-lg">
-    <h1 class="text-5xl sm:text-6xl font-bold text-gray-800 mb-10">
-      Kalendarz Konsultacji
-    </h1>
-
-    <div class="flex flex-col sm:flex-row gap-6 justify-center">
-      <a href="{{ url_for('auth.login') }}"
-         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded text-xl transition duration-200">
-        Zaloguj się
-      </a>
-      <a href="{{ url_for('auth.register') }}"
-         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded text-xl transition duration-200">
-        Zarejestruj się
-      </a>
-    </div>
+  <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
+    <img src="{{ static_url_for('static', filename='images/kal.png') }}"
+         width="806" height="382" alt="kalendarz" />
   </div>
-</div>
+
+  <p class="text-center text-lg">
+   🚀 Learn to Build a SAAS App with Flask at:
+    <strong>
+      <a class="border-b border-gray-900 mb-1" href="https://buildasaasappwithflask.com?ref=docker-flask-example">https://buildasaasappwithflask.com</a>
+    </strong>
+  </p>
+
+  <p class="text-center text-lg mt-6">
+   🐳 Learn the Docker fundamentals at:
+    <strong>
+      <a class="border-b border-gray-900 mb-1" href="https://diveintodocker.com?ref=docker-flask-example">https://diveintodocker.com</a>
+    </strong>
+  </p>
 {% endblock %}
+
