--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -1,6 +1,6 @@
 {% extends "layouts/index.html" %}
 
-{% block title %}Docker + Flask{% endblock %}
+{% block title %}Kalendarz Konsultacji{% endblock %}
 
 {% block body %}
   <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
@@ -9,16 +9,16 @@
   </div>
 
   <p class="text-center text-lg">
-   🚀 Learn to Build a SAAS App with Flask at:
+    Nie masz konta?
     <strong>
-      <a class="border-b border-gray-900 mb-1" href="https://buildasaasappwithflask.com?ref=docker-flask-example">https://buildasaasappwithflask.com</a>
+      <a class="border-b border-gray-900 mb-1" href="{{ url_for('auth.register') }}">Zarejestruj się</a>
     </strong>
   </p>
 
   <p class="text-center text-lg mt-6">
-   🐳 Learn the Docker fundamentals at:
+   Posiadasz już konto?
     <strong>
-      <a class="border-b border-gray-900 mb-1" href="https://diveintodocker.com?ref=docker-flask-example">https://diveintodocker.com</a>
+      <a class="border-b border-gray-900 mb-1" href="{{ url_for('auth.login') }}">Zaloguj się</a>
     </strong>
   </p>
 {% endblock %}
