--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -4,8 +4,8 @@
 
 {% block body %}
   <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
-    <img src="{{ static_url_for('static', filename='images/kal.png') }}"
-         width="806" height="382" alt="kalendarz" />
+    <img src="{{ url_for('static', filename='images/f.png') }}"
+         width="706" height="318" alt="kalendarz" />
   </div>
 
   <p class="text-center text-lg">
