--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -4,7 +4,7 @@
 
 {% block body %}
   <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
-  <img src="{{ static_url_for('static', filename='images/f.png') }}" alt="kal" />
+  <img src="{{ static_url_for('static', filename='images/flask.png') }}" alt="kal" />
   </div>
 
   <p class="text-center text-lg">
