--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -5,6 +5,8 @@
 {% block body %}
   <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
   <img src="{{ static_url_for('static', filename='images/kalendarz.png') }}" alt="kal" />
+      <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
+  <img src="{{ static_url_for('static', filename='images/flask.png') }}" alt="f" />
   </div>
 
   <p class="text-center text-lg">
