--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -3,24 +3,26 @@
 {% block title %}Kalendarz Konsultacji{% endblock %}
 
 {% block body %}
-  <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
-  <img src="{{ static_url_for('static', filename='images/kalendarz.png') }}" alt="kal" />
-      <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
-  <img src="{{ static_url_for('static', filename='images/flask.png') }}" alt="f" />
+  <div class="flex flex-col items-center justify-center min-h-screen bg-white px-4">
+    <h1 class="text-6xl sm:text-7xl font-extrabold text-black text-center leading-tight">
+      Kalendarz<br>Konsultacji
+    </h1>
+
+    <div class="mt-12 text-center">
+      <p class="text-lg">
+        Nie masz konta?
+        <strong>
+          <a class="border-b border-gray-900 mb-1" href="{{ url_for('auth.register') }}">Zarejestruj się</a>
+        </strong>
+      </p>
+
+      <p class="text-lg mt-6">
+        Posiadasz już konto?
+        <strong>
+          <a class="border-b border-gray-900 mb-1" href="{{ url_for('auth.login') }}">Zaloguj się</a>
+        </strong>
+      </p>
+    </div>
   </div>
-
-  <p class="text-center text-lg">
-    Nie masz konta?
-    <strong>
-      <a class="border-b border-gray-900 mb-1" href="{{ url_for('auth.register') }}">Zarejestruj się</a>
-    </strong>
-  </p>
-
-  <p class="text-center text-lg mt-6">
-   Posiadasz już konto?
-    <strong>
-      <a class="border-b border-gray-900 mb-1" href="{{ url_for('auth.login') }}">Zaloguj się</a>
-    </strong>
-  </p>
 {% endblock %}
 
