--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -1,3 +1,7 @@
+{% extends "layouts/index.html" %}
+
+{% block title %}Kalendarz Konsultacji{% endblock %}
+
 {% block body %}
   <div class="flex items-center justify-center min-h-screen bg-white px-4">
     <div class="text-center">
