--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -5,14 +5,14 @@
 {% block body %}
   <div class="flex items-center justify-center min-h-screen bg-white px-4">
     <div class="text-center">
-      <h1 class="text-[80px] sm:text-[100px] font-extrabold text-black leading-none">
+      <h1 class="text-8xl sm:text-9xl font-extrabold text-black leading-none" style="font-size: 6rem;">
         Kalendarz
       </h1>
-      <h1 class="text-[80px] sm:text-[100px] font-extrabold text-black leading-none">
+      <h1 class="text-8xl sm:text-9xl font-extrabold text-black leading-none" style="font-size: 6rem;">
         Konsultacji
       </h1>
 
-      <div class="mt-12">
+      <div class="mt-16">
         <p class="text-xl">
           Nie masz konta?
           <strong>
