--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -3,14 +3,10 @@
 {% block title %}Kalendarz Konsultacji{% endblock %}
 
 {% block body %}
-  <div class="flex items-center justify-center min-h-screen bg-white px-4">
-    <div class="text-center">
-      <h1 class="text-8xl sm:text-9xl font-extrabold text-black leading-none" style="font-size: 6rem;">
-        Kalendarz
-      </h1>
-      <h1 class="text-8xl sm:text-9xl font-extrabold text-black leading-none" style="font-size: 6rem;">
-        Konsultacji
-      </h1>
+  <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
+    <img src="{{ static_url_for('static', filename='images/flask.png') }}"
+         width="480" height="188" alt="Flask" />
+  </div>
 
       <div class="mt-16">
         <p class="text-xl">
