--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -4,8 +4,7 @@
 
 {% block body %}
   <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
-    <img src="{{ static_url_for('static', filename='images/flask.png') }}"
-         width="480" height="188" alt="Flask" />
+    <img src="{{ static_url_for('static', filename='images/flask.png') }}" alt="Flask" />
   </div>
 
       <div class="mt-16">
