--- a/calendarproject/page/templates/page/home.html
+++ b/calendarproject/page/templates/page/home.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 <div class="flex justify-center pt-24 pb-12 px-2 sm:px-0">
-  <img src="{{ static_url_for('static', filename='images/flask.png') }}" alt="f" />
+  <img src="{{ static_url_for('static', filename='images/flas.png') }}" alt="f" />
   </div>
 
 {% if not current_user.is_authenticated %}
